# SomaAgentHub

./: .dev_bind_ports.env  .dockerignore  .env.template  .gitignore  CLAIMED_VS_REALITY.md  CLEANUP_COMPLETE.md  CLEANUP_RECOMMENDATIONS.md  CLUSTER_PORT_ALLOCATION.md  DEV_RUN.md  DOCUMENTATION_INDEX_MOCK_CLEANUP.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  MOCKS_AND_FAKES_AUDIT.md  MOCK_CLEANUP_COMPLETED.md  Makefile  PORT_REFERENCE.md  PRODUCTION_READINESS_ACTION_PLAN.md  README.md  TEST_REFACTORING_ROADMAP.md  TRUTH_REPORT.md  changelog.md  comprehensive-health-check.py  dependency-analyzer.py  docker-compose.dev.yml  docker-compose.stack.yml  docker-compose.yml  final-push-100.sh  glossary.md  k8s-minimal-deploy.yaml  kind-cluster-persistent.yaml  orchestrator-deployment.yaml  pyproject.toml  requirements-dev.txt  run_full_k8s_test.sh  style-guide.md
libs/python/somagent_common/: README.md  pyproject.toml
libs/python/somagent_common/somagent_common/: __init__.py  logging.py
libs/python/somagent_eventbus/: README.md  pyproject.toml
libs/python/somagent_eventbus/somagent_eventbus/: __init__.py  schemas.py
libs/python/somagent_secrets/: README.md  pyproject.toml
libs/python/somagent_secrets/somagent_secrets/: __init__.py
libs/python/somagent_somabrain/: README.md  pyproject.toml
libs/python/somagent_somabrain/somagent_somabrain/: __init__.py  client.py  models.py
sdk/python/: README.md  pyproject.toml
sdk/python/somaagent/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/somatrace/: __init__.py  tracing.py
services/analytics-service/: Dockerfile  pyproject.toml  requirements.txt
services/analytics-service/app/: main.py  observability.py
services/analytics-service/app/api/: __init__.py  routes.py  schemas.py
services/analytics-service/app/core/: __init__.py  config.py  metrics.py  store.py
services/analytics-service/tests/: test_benchmarks.py
services/constitution-service/: Dockerfile  README.md  pyproject.toml  redis_client.py  requirements.txt
services/constitution-service/app/: __init__.py  dependencies.py  main.py
services/constitution-service/app/api/: routes.py
services/constitution-service/app/core/: cache.py  config.py  constitution.py  models.py  signing.py
services/constitution-service/app/data/: constitution_bundle.json  constitution_public_key.pem
services/constitution-service/tests/: test_constitution.py
services/gateway-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/gateway-api/app/: __init__.py  config.py  dependencies.py  main.py  observability.py  region_router.py  wizard_engine.py
services/gateway-api/app/api/: dashboard.py  routes.py
services/gateway-api/app/core/: auth.py  config.py  context.py  metrics.py  middleware.py  moderation.py  otel.py  redis.py
services/gateway-api/app/models/: context.py  sessions.py
services/gateway-api/app/wizards/: marketing_campaign.yaml
services/mao-service/: README.md  pyproject.toml  requirements.txt  worker.py
services/mao-service/app/: main.py  workspace_manager.py
services/mao-service/workflows/: activities.py  project_workflow.py
services/memory-gateway/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/memory-gateway/app/: __init__.py  dependencies.py  embedding_service.py  main.py  rag_pipeline.py  vector_store.py
services/memory-gateway/app/api/: routes.py  schemas.py
services/memory-gateway/app/core/: config.py
services/orchestrator/: Dockerfile  README.md  pyproject.toml  requirements.txt  temporal_worker.py  temporal_worker_production.py
services/orchestrator/app/: __init__.py  main.py  observability.py  worker.py
services/orchestrator/app/api/: conversation.py  projects.py  routes.py  training.py
services/orchestrator/app/core/: a2a_protocol.py  config.py  framework_router.py
services/orchestrator/app/intake/: __init__.py  events.py  manager.py  rules.py  schemas.py
services/orchestrator/app/integrations/: __init__.py  a2a_adapter.py  autogen_adapter.py  crewai_adapter.py  langgraph_adapter.py  wizard_to_workflow.py
services/orchestrator/app/patterns/: __init__.py  circuit_breaker.py  saga.py
services/orchestrator/app/persona/: __init__.py  exporter.py  manifest.py  signing.py
services/orchestrator/app/planner/: __init__.py  client.py  planner_service.py  schemas.py
services/orchestrator/app/repository/: __init__.py  models.py  plan_repository.py
services/orchestrator/app/workflows/: __init__.py  mao.py  marketing_activities.py  marketing_campaign.py  rental.py  session.py  unified_multi_agent.py  volcano_launcher.py
services/orchestrator/tests/: conftest.py  test_health_analytics.py  test_routes.py
services/orchestrator/tests/core/: test_framework_router.py
services/orchestrator/workflows/: __init__.py  activities.py  kamachiq_workflow.py
services/policy-engine/: Dockerfile  README.md  policy_app.py  policy_rules.py  pyproject.toml  redis_client.py  requirements.txt  run.sh  run_eval_test.py
services/policy-engine/app/: __init__.py  constitution_cache.py  main.py  observability.py  policy_app.py  policy_rules.py  redis_client.py  run_eval_test.py
services/policy-engine/app/api/: routes.py  (+1 more)
services/policy-engine/tests/: test_integration_flow.py  test_policy_app.py
services/settings-service/: README.md  pyproject.toml  requirements.txt
services/settings-service/app/: __init__.py  main.py
services/slm-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_worker.py
services/slm-service/app/: __init__.py  ab_testing.py  dataset_builder.py  dependencies.py  finetuning.py  main.py  model_router.py  observability.py  prompt_engine.py
services/slm-service/slm/: __init__.py  local_models.py  metrics.py  producer.py  worker.py
services/slm-service/somallm_provider/: __init__.py  local_models.py  metrics.py  producer.py  worker.py
services/slm-service/tests/: run_adapters_no_pytest.py  run_tests_no_pytest.py  run_worker_tests_no_pytest.py  test_adapters.py  test_api_endpoints.py  test_producer.py  test_worker.py
(+683 files in other folders)
