[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somaagent"
version = "0.1.0"
description = "Python SDK for SomaAgent - AI agents with task capsules"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SomaAgent Team", email = "sdk@somaagent.io"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ai", "agents", "llm", "api", "sdk"]

dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "traceloop-sdk>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.250",
]

[project.urls]
Homepage = "https://somaagent.io"
Documentation = "https://docs.somaagent.io"
Repository = "https://github.com/somaagent/python-sdk"
Issues = "https://github.com/somaagent/python-sdk/issues"

[tool.setuptools]
packages = ["somaagent", "somatrace"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
