[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somagent-constitution-service"
version = "0.1.0"
description = "Service managing SomaGent constitution retrieval and validation."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.29",
    "pydantic-settings~=2.2",
    "httpx~=0.27",
    "cryptography~=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
