[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somagent-gateway-api"
version = "0.1.0"
description = "Gateway API for SomaGent"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.29",
    "httpx~=0.27",
    "pydantic-settings~=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "httpx~=0.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
