[tool.poetry]
name = "gateway-api"
version = "0.1.0"
description = "The main entry point for the SomaAgentHub platform."
authors = ["SomaTech LATAM"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
httpx = ">=0.27.0"
pydantic-settings = ">=2.2.0"
pyjwt = ">=2.9.0"
redis = {extras = ["hiredis"], version = ">=5.0.0"}
prometheus-client = ">=0.20.0"
opentelemetry-instrumentation-fastapi = ">=0.48b0"
opentelemetry-sdk = ">=1.25.0"
opentelemetry-exporter-otlp = ">=1.25.0"
opentelemetry-exporter-prometheus = "*"
pyyaml = ">=6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
