[tool.poetry]
name = "mao-service"
version = "1.0.0"
description = "Multi-Agent Orchestrator service using Temporal workflows"
authors = ["SomaGent Team <team@somagent.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.5.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.0"
docker = "^7.0.0"
boto3 = "^1.34.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
GitPython = "^3.1.40"
requests = "^2.31.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.7"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
