[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somagent-orchestrator"
version = "0.1.0"
description = "Core orchestrator enforcing constitution and coordinating persona activity."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.29",
    "pydantic-settings~=2.2",
    "httpx~=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "respx~=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
